add language configuration to posts

--- a/src/posts/2018-06-02-træplader.md
+++ b/src/posts/2018-06-02-træplader.md
@@ -3,6 +3,7 @@ layout: blog
 title: 'Træplader'
 date: 2018-06-02T00:46:54.386Z
 thumbnail: /uploads/traeplader/trae2.png
+language: da
 ---
 
 Umiddelbart syntes jeg at 6 mm krydsfinér lød som noget som et hvert Fablab har stående, eller som noget man lige kan hente i Silvan. En mindre naiv og langt mere kyndig møbelsnedkerbroder fik dog nævmt at krydsfinér er en overordnet betegnelse og ikke én slags træ. Og at der nok skal noget specielt træ til at kunne benyttes i vand. Okay okay: Træet, der skal bruges, er 6mm marinekrydsfiner fx Okoume eller Okoumflex i mit tilfælde, som har et vandisolerende lag.
