--- a/src/posts/2018-06-22-skum.md
+++ b/src/posts/2018-06-22-skum.md
@@ -3,6 +3,7 @@ layout: blog
 title: 'Skum'
 date: 2018-06-22T00:46:54.386Z
 thumbnail: /uploads/skumibaad/skum1.png
+language: da
 ---
 
 I hver side af skroget har båden to hulrum, der skal fyldes med skum således af båden holder sig flydende ved evt. kæntring, eller hvis der skulle komme vand ind af andre årsager. Til det bruger man såkaldt selvudvidende PU skum som man sprøjter ud som en slags flødeskum der langsom udvider sig til 10 gange størrelse. Jeg havde først ikke helt tiltro til hvor meget det egentlig ville udvide sig, og fik brugt lidt for mange flasker til den ene side. Når begge sider er fyldt, skal indersiden af båden slibes og tætnes med ét stort lag epoxy. Derudover skal toppen af båden (vindskjoldet) monteres og have epoxy. 
