--- a/src/posts/2018-08-30-sædet.md
+++ b/src/posts/2018-08-30-sædet.md
@@ -3,6 +3,7 @@ layout: blog
 title: Sædet
 date: '2018-08-30T12:00:00+02:00'
 thumbnail: /uploads/img_0283.jpg
+language: da
 ---
 Man kan i den grad blive overrasket over prisforskellen på ting i USA og i DK. Selvom jeg har købt et sæde magen til bådebyggerens forslåede, koster det 3 gange så meget, ligemeget hvor længe man leder på nettet. Det samme gælder desværre en del andre ting, og i et senere indlæg vil jeg opgive den endelige pris for båden.
 
