move images to cdn

--- a/src/posts/2018-06-02-træplader.md
+++ b/src/posts/2018-06-02-træplader.md
@@ -2,7 +2,7 @@
 layout: blog
 title: 'Træplader'
 date: 2018-06-02T00:46:54.386Z
-thumbnail: /uploads/traeplader/trae2.png
+thumbnail: 'https://ucarecdn.com/20336170-faaf-424a-a956-87543e74be30/'
 language: da
 ---
 
@@ -10,7 +10,6 @@ Umiddelbart syntes jeg at 6 mm krydsfinér lød som noget som et hvert Fablab ha
 
 De fleste store træhandeler har det ikke liggende på lager, men kan bestille det hjem. Jeg ville dog gerne have træet så hurtigt som muligt, og Krydsfinérhandlen i Rødovre har 2500 x 1220 mm plader på lager. Selvom 3 plader af denne størrelse ville være tilstrækkeligt, besluttede jeg at købe 4 - laserskærere er ikke altid lige pålidelige. Pladerne passede på taget af en stationcar, og blev derefter fragtet til XL-byg, også i Rødovre, for at blive skåret op til fremtidig brug på laserskærere i størrelsen 1200x800 mm (se forklaring i senere indlæg). 
 
-<div class="dual-image-container">
-  <img src="/uploads/traeplader/trae1.png" alt="" class="dual-image-container__img" />
-  <img src="/uploads/traeplader/trae2.png" alt="" class="dual-image-container__img" />
-</div>
+![null](https://ucarecdn.com/20336170-faaf-424a-a956-87543e74be30/)
+
+![null](https://ucarecdn.com/fdc51ec8-7337-4e1a-9cc1-936229afec97/)
