--- a/src/posts/2018-08-30-sædet.md
+++ b/src/posts/2018-08-30-sædet.md
@@ -2,7 +2,7 @@
 layout: blog
 title: Sædet
 date: '2018-08-30T12:00:00+02:00'
-thumbnail: /uploads/img_0283.jpg
+thumbnail: 'https://ucarecdn.com/fcda9799-cbb4-4649-8d1f-05f2602a08e2/'
 language: da
 ---
 Man kan i den grad blive overrasket over prisforskellen på ting i USA og i DK. Selvom jeg har købt et sæde magen til bådebyggerens forslåede, koster det 3 gange så meget, ligemeget hvor længe man leder på nettet. Det samme gælder desværre en del andre ting, og i et senere indlæg vil jeg opgive den endelige pris for båden.
@@ -11,10 +11,10 @@ Jeg valgte en klassisk “navy” som farve til sædet, som I senere vil blive b
 
 Som ses på billedet, bliver nogle af de laserskårede dele samlet til en “sædeholder”, der først er limet sammen med trælim, og derefter er blevet malet med epoxy. Holderen skrues fast til sædet og sættes fast i bunden af båden med velcro. Bagpå er plads til batteriet, og huller til stropper, der kan holde batteriet på plads.
 
-![null](/uploads/img_0283.jpg)
+![null](https://ucarecdn.com/fcda9799-cbb4-4649-8d1f-05f2602a08e2/)
 
-![null](/uploads/img_0284.jpg)
+![null](https://ucarecdn.com/e7234fad-2280-4a2f-be2f-d67cb990a837/)
 
-![null](/uploads/img_0285.jpg)
+![null](https://ucarecdn.com/fce23505-6767-45f9-9922-c7d76378ae5a/)
 
-![null](/uploads/img_0290.png)
+![null](https://ucarecdn.com/02dc1833-1797-4fac-a114-0dd92061843a/)
